# ZWAN-CODEX-V2

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  install.sh  scope.example.yaml
agent/: askpass.sh  audit.py  executor.py  main.py  planner.py  policy.py  pyproject.toml  registry.py  scope.py
agent/tests/: test_browser_policy.py  test_planner.py  test_policy.py  test_scope.py
agent/tools/: browser.py  caido.py
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: config.py  main.py
backend/app/agents/: agentic_target.py  base.py  chain_hunter.py  desync.py  js_miner.py  oauth_chain.py  orchestrator.py  race.py  recon.py  report.py  ssrf.py  validator.py  zeroday_scanner.py
backend/app/api/: agents.py  engagements.py  findings.py  loot.py  settings_api.py  system.py
backend/app/db/: base.py  models.py
backend/app/llm/: router.py
backend/app/oast/: interactsh.py
backend/app/prompts/: agentic_target.md  chain_hunter.md  desync.md  js_miner.md  oauth_chain.md  race.md  recon.md  report.md  ssrf.md  validator.md  zeroday_scanner.md
backend/app/proxy/: burp.py  caido.py
backend/app/tools/: ffuf.py  httpx.py  katana.py  nuclei.py  shell.py  subfinder.py
backend/app/ws/: manager.py
backend/worker/: tasks.py
frontend/: Dockerfile  next.config.ts  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx
frontend/components/: nav.tsx  providers.tsx  system-bar.tsx
frontend/lib/: api.ts  useAgentStream.ts  useSystemStatus.ts
notes/: medium-leads.md
tools-image/: Dockerfile
(+12 files in other folders)
