[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zwan-agent"
version = "2.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
    "pyyaml>=6.0",
    "aiosqlite>=0.20.0",
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
