[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "worker"]

[project]
name = "zwan-codex-backend"
version = "2.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.9",
    "pydantic-settings>=2.7",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "arq>=0.26",
    "redis[hiredis]>=5.2",
    "httpx>=0.27",
    "anthropic>=0.49",
    "openai>=1.50",          # openrouter compat
    "qdrant-client>=1.12",
    "cryptography>=43",
    "python-multipart>=0.0.20",
    "pydantic-ai>=0.0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.9",
    "mypy>=1.13",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
